<resources>
    <string name="app_name">DNASDKAndroid</string>
    <string name="version">v1.0.0</string>
    <string name="data">2018-01-08 15:30</string>

    <string name="open_wallet">打开钱包</string>
    <string name="please_input_password">请输入密码</string>
    <string name="generate_wallet">生成钱包</string>
    <string name="transfer_transaction">转账</string>
    <string name="transfer_address">转账地址</string>
    <string name="transfer_asset_amount">转账资产数量</string>
    <string name="transfer_asset_name">请选择转账资产</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="choose_wallet">请选择钱包</string>
    <string name="connect_node">连接节点</string>

    <!-- MainActivity -->
    <string name="choose_file">请选择钱包文件</string>
    <string name="choose_correct_file">请选择正确的钱包文件</string>
    <string name="enter_password">请输入密码</string>
    <string name="password_wrong">密码错误，请重新输入</string>
    <string name="open_file_false">打开钱包失败，原因：私钥解密失败</string>
    <string name="please_connect_node">请先连接节点</string>
    <string name="you_select_certificate">您选择的钱包为：</string>
    <string name="selected_wallet">已选择钱包</string>
    <string name="get_asset_msg_success">获取资产信息成功！</string>
    <string name="transfer_success">转账成功</string>
    <string name="transfer_false">转账失败，错误代码为：</string>
    <string name="get_node_hight_success">获取节点高度成功</string>
    <string name="get_node_hight_false">获取节点高度失败</string>

    <!-- OpenWallet -->
    <string name="address_verification_false">地址验证失败。</string>
    <string name="no_enough_balance">没有足够的余额进行转账</string>

    <!-- WalletGenerate -->
    <string name="generate_wallet_success">生成钱包成功，钱包路径为：</string>
</resources>
