<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dnawalletsdk.main.MainActivity" >

    <Button
        android:id="@+id/connectNode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/connect_node" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chooseWallet"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/please_input_password" />

    <Button
        android:id="@+id/generateWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/openWallet"
        android:layout_below="@+id/openWallet"
        android:layout_marginTop="16dp"
        android:text="@string/generate_wallet" />

    <Button
        android:id="@+id/chooseWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectNode"
        android:layout_marginTop="16dp"
        android:text="@string/choose_wallet" />

    <Button
        android:id="@+id/openWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="16dp"
        android:text="@string/open_wallet" />



</RelativeLayout>