<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dnawalletsdk.main.MainActivity" >

    <EditText
        android:id="@+id/transferAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/transfer_address" />

    <Button
        android:id="@+id/chooseAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transferAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/transfer_asset_name" />

    <EditText
        android:id="@+id/transferAssetAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transferAddress"
        android:layout_below="@+id/chooseAsset"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/transfer_asset_amount" />

    <Button
        android:id="@+id/transferSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transferAssetAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/transfer_transaction" />

</RelativeLayout>